--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/cache-manager": "^3.0.0",
     "@nestjs/common": "^11.0.12",
     "@nestjs/config": "^2.2.0",
@@ -28,6 +29,7 @@
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^11.0.7",
+    "@nestjs/terminus": "^11.0.0",
     "axios": "^1.8.4",
     "cache-manager": "^6.4.1",
     "cache-manager-redis-store": "^3.0.1",
